[project]
name = "icequeen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.90",
    "pooch>=1.8.2",
    "pyqt5>=5.15.11",
    "pywavelets>=1.9.0",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
]
